--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Resume : " />
+    <meta name="description" content="Dipen Pradhan - All Projects : " />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Resume</title>
+    <title>Dipen Pradhan - All Projects</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/dipenpradhan/resume">View on GitHub</a>
 
-          <h1 id="project_title">Resume</h1>
+          <h1 id="project_title">Dipen Pradhan - All Projects</h1>
           <h2 id="project_tagline"></h2>
 
             <section id="downloads">
@@ -31,39 +31,99 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>Welcome to GitHub Pages.</h3>
+        <h1>APPS</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<h2><a href="https://play.google.com/store/apps/details?id=com.expensetracker">Expense Tracker</a></h2>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<p><a href="https://play.google.com/store/apps/details?id=com.expensetracker">Click here to see on play store</a></p>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>An android app for keeping a track of daily expenses. It features a calendar view for ease of use, and provides a simplistic approach to entering, viewing and photo-tagging expenses with support for multiple currencies with live conversion rates.</p>
 
-<h3>Designer Templates</h3>
+<p>The app includes a custom calendar grid implementation with swiping gestures and animations, photo capture and storage for tagging expenses with receipts or bills, and a list based view for viewing year-wise, month-wise, and day-wise expenses.</p>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<p>This app was built by me as a freelance programmer for Snoops Co., a company located in Australia, based on the requirements and designs provided.</p>
 
-<h3>Rather Drive Stick?</h3>
+<h2><a href="https://play.google.com/store/apps/details?id=com.expensetracker">Poncho Restaurant Mobile Ordering app</a></h2>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p><a href="https://play.google.com/store/apps/details?id=com.expensetracker">Click here to see on play store</a></p>
 
-<h3>Authors and Contributors</h3>
+<p>Developed as part of a 3 member team (as a full time Software Engineer at Movivation Labs Pvt. Ltd.) this application is used by customers to order food from "Poncho" restaurants.</p>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>It has a clean, easy to use interface, allowing for quickly picking food items from a menu card and placing orders (triggering SMS and email notifications).</p>
 
-<h3>Support or Contact</h3>
+<p>My role on the team was in developing the android application and part of the back end - RESTful web services built using the Java Spring framework and MySQL database.</p>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<h2>Tablet app</h2>
+
+<p>Currently working on a 3 member team, developing a tablet app having multiple pane navigation, and implementing its back end web services using the Java Spring Framework and MySQL database.</p>
+
+<h1>GAMES</h1>
+
+<h2><a href="https://docs.google.com/file/d/0B6EorZtgpyESbzRyS20ycUpxdk0/edit?usp=sharing">Drunk Man</a></h2>
+
+<p><a href="https://docs.google.com/file/d/0B6EorZtgpyESbzRyS20ycUpxdk0/edit?usp=sharing">Click here to download</a></p>
+
+<p>A game for android devices where the player is challenged with to make a drunk man walk in a straight line.
+Built entirely from scratch using OpenGL ES, the game involves balancing a drunk man walking on a lonely road, whose drunkenness increases with time.</p>
+
+<p>This game was built by me as a freelance programmer for Neurolinx Software Technologies Pvt. Ltd. based on the requirements, graphic assets and design mockups provided.</p>
+
+<p>The entire project, inclusive of developing the game engine, movement and rendering logic was handled by me.</p>
+
+<h2><a href="https://docs.google.com/file/d/0B6EorZtgpyEScmZmeGZzSzZwWjA/edit?usp=sharing">Bot Wars - Academic Project - B.E.(Computers)</a></h2>
+
+<p><a href="https://docs.google.com/file/d/0B6EorZtgpyEScmZmeGZzSzZwWjA/edit?usp=sharing">Click here to download</a>
+More info and source code at:<a href="https://code.google.com/p/bot-wars/">https://code.google.com/p/bot-wars/</a></p>
+
+<p>A side-scrolling 2-D game for Android devices, built with a team of 3 students as an academic project for the final year of our Bachelor's Degree in Computer Engineering. It features single and multiplayer gameplay.</p>
+
+<p>The core gameplay was built using AndEngine and Box2D libraries, along with a custom client-server style multiplayer implementation based on UDP (for WiFi and 3G) and Bluetooth RFCOMM sockets.</p>
+
+<p>Bot wars has received over 600 downloads and over 25 code forks from google code and github open source repositories.</p>
+
+<h2><a href="https://docs.google.com/file/d/0B6EorZtgpyESa3BUNTJKY1FLVkE/edit?usp=sharing">eGGs</a></h2>
+
+<p><a href="https://docs.google.com/file/d/0B6EorZtgpyESa3BUNTJKY1FLVkE/edit?usp=sharing">Click here to download</a></p>
+
+<p>eGGs is an android game made during my internship, featuring a pull-to-shoot slingshot mechanism based on AndEngine and Box2D. </p>
+
+<p>The game involves aiming and shooting eggs with different bouncing characteristics into a nest using a catapult.</p>
+
+<h2><a href="https://docs.google.com/file/d/0B6EorZtgpyESQjROTWZrc0VZYTA/edit?usp=sharing">NumTrix</a></h2>
+
+<p><a href="https://docs.google.com/file/d/0B6EorZtgpyESQjROTWZrc0VZYTA/edit?usp=sharing">Click here to download</a></p>
+
+<p>Source code available at: <a href="https://github.com/dipenpradhan/numtrix">https://github.com/dipenpradhan/numtrix</a></p>
+
+<p>A numbers game for android devices that challenges players to perform quick mental additions and correctly place falling numbered blocks on top of one another to match a target sum.</p>
+
+<p>This game was an experiment for understanding the Canvas API on android.</p>
+
+<h1>OTHER PROJECTS</h1>
+
+<h3>Android as mouse</h3>
+
+<p>Built a prototype application for using motion sensor input from an android device to move the mouse pointer on a PC (A Java application runs on the PC acting as a TCP server)</p>
+
+<h3>Webcam caputure</h3>
+
+<p>Built a prototype application in JAVA using the JMF framework for displaying live video input a webcam with an overlay image on top.</p>
+
+<h3>Location tracking</h3>
+
+<p>Developed a location tracking mechanism which silently tracks a user's location using a background service on android phones when GPS is activated, with a focus on battery saving.</p>
+
+<h3><a href="https://play.google.com/store/apps/details?id=com.movivation.icar">Car servicing application</a></h3>
+
+<p><a href="https://play.google.com/store/apps/details?id=com.movivation.icar">Click here to see on play store</a>
+Built a proof-of-concept application on android for placing car servicing appointments, with parse.com as backend.</p>
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Resume maintained by <a href="https://github.com/dipenpradhan">dipenpradhan</a></p>
+        <p class="copyright">Dipen Pradhan - All Projects maintained by <a href="https://github.com/dipenpradhan">dipenpradhan</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
