Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 
 <p>The app includes a custom calendar grid implementation with swiping gestures and animations, photo capture and storage for tagging expenses with receipts or bills, and a list based view for viewing year-wise, month-wise, and day-wise expenses.</p>
 
-<p>This app was built by me as a freelance programmer for Snoops Co., a company located in Australia, based on the requirements and designs provided.</p>
+<p>This app was built by me as a freelance programmer for Snoops Co., Australia, based on the requirements and designs provided.</p>
 
-<h2><a href="https://play.google.com/store/apps/details?id=com.expensetracker">Poncho Restaurant Mobile Ordering app</a></h2>
+<h2><a href="https://play.google.com/store/apps/details?id=com.poncho">Poncho Restaurant Mobile Ordering app</a></h2>
 
-<p><a href="https://play.google.com/store/apps/details?id=com.expensetracker">Click here to see on play store</a></p>
+<p><a href="https://play.google.com/store/apps/details?id=com.poncho">Click here to see on play store</a></p>
 
 <p>Developed as part of a 3 member team (as a full time Software Engineer at Movivation Labs Pvt. Ltd.) this application is used by customers to order food from "Poncho" restaurants.</p>
 
@@ -66,7 +66,7 @@
 <p>A game for android devices where the player is challenged with to make a drunk man walk in a straight line.
 Built entirely from scratch using OpenGL ES, the game involves balancing a drunk man walking on a lonely road, whose drunkenness increases with time.</p>
 
-<p>This game was built by me as a freelance programmer for Neurolinx Software Technologies Pvt. Ltd. based on the requirements, graphic assets and design mockups provided.</p>
+<p>This game was built by me as a freelance programmer for Neurolinx Software Technologies Pvt. Ltd., Mumbai-India based on the requirements, graphic assets and design mockups provided.</p>
 
 <p>The entire project, inclusive of developing the game engine, movement and rendering logic was handled by me.</p>
 
