Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -109,14 +109,18 @@ More info and source code at:<a href="https://code.google.com/p/bot-wars/">https
 
 <p>Built a prototype application in JAVA using the JMF framework for displaying live video input a webcam with an overlay image on top.</p>
 
-<h3>Location tracking</h3>
+<h3><a href="http://www.youtube.com/watch?feature=player_embedded&amp;v=8klrW7F_q3o">Created a grass animation algorithm using Bezier curve manipulation in Java.</a></h3>
 
-<p>Developed a location tracking mechanism which silently tracks a user's location using a background service on android phones when GPS is activated, with a focus on battery saving.</p>
+<p><a href="http://www.youtube.com/watch?feature=player_embedded&amp;v=8klrW7F_q3o">Click here for video</a></p>
 
 <h3><a href="https://play.google.com/store/apps/details?id=com.movivation.icar">Car servicing application</a></h3>
 
 <p><a href="https://play.google.com/store/apps/details?id=com.movivation.icar">Click here to see on play store</a>
 Built a proof-of-concept application on android for placing car servicing appointments, with parse.com as backend.</p>
+
+<h3>Location tracking</h3>
+
+<p>Developed a location tracking mechanism which silently tracks a user's location using a background service on android phones when GPS is activated, with a focus on battery saving.</p>
       </section>
     </div>
 
