Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -43,11 +43,9 @@
 
 <p>This app was built by me as a freelance programmer for Snoops Co., Australia, based on the requirements and designs provided.</p>
 
-<h2><a href="https://play.google.com/store/apps/details?id=com.poncho">Poncho Restaurant Mobile Ordering app</a></h2>
+<h2>Restaurant Mobile Ordering app</h2>
 
-<p><a href="https://play.google.com/store/apps/details?id=com.poncho">Click here to see on play store</a></p>
-
-<p>Developed as part of a 3 member team (as a full time Software Engineer at Movivation Labs Pvt. Ltd.) this application is used by customers to order food from "Poncho" restaurants.</p>
+<p>Developed as part of a 3 member team (as a full time Software Engineer at Movivation Labs Pvt. Ltd.) this application is used by customers to order food from the client's restaurants.</p>
 
 <p>It has a clean, easy to use interface, allowing for quickly picking food items from a menu card and placing orders (triggering SMS and email notifications).</p>
 
@@ -113,14 +111,13 @@ More info and source code at:<a href="https://code.google.com/p/bot-wars/">https
 
 <p><a href="http://www.youtube.com/watch?feature=player_embedded&amp;v=8klrW7F_q3o">Click here for video</a></p>
 
-<h3><a href="https://play.google.com/store/apps/details?id=com.movivation.icar">Car servicing application</a></h3>
+<h3>Car servicing application</h3>
 
-<p><a href="https://play.google.com/store/apps/details?id=com.movivation.icar">Click here to see on play store</a>
-Built a proof-of-concept application on android for placing car servicing appointments, with parse.com as backend.</p>
+<p>Built a proof-of-concept application on android for placing car servicing appointments, with parse.com as back-end.</p>
 
 <h3>Location tracking</h3>
 
-<p>Developed a location tracking mechanism which silently tracks a user's location using a background service on android phones when GPS is activated, with a focus on battery saving.</p>
+<p>Developed a location tracking mechanism which silently tracks a user's location using a background service on android phones, with a focus on battery saving.</p>
       </section>
     </div>
 
