Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ More info and source code at:<a href="https://code.google.com/p/bot-wars/">https
 
 <p>Built a prototype application for using motion sensor input from an android device to move the mouse pointer on a PC (A Java application runs on the PC acting as a TCP server)</p>
 
-<h3>Webcam caputure</h3>
+<h3>Webcam capture</h3>
 
 <p>Built a prototype application in JAVA using the JMF framework for displaying live video input a webcam with an overlay image on top.</p>
 
